# clinical-safety-intelligence

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_evidence_workflow.py  smoke_test.py
.github/workflows/: ci.yml
.streamlit/: config.toml
configs/: data_sources.yaml  drug_scope.yaml  event_scope.yaml  model_providers.yaml  signal_thresholds.yaml
docs/: architecture.md  data_sources.md  evaluation.md  langgraph_workflow.md  limitations.md  results.md  running.md
src/clinical_safety/: __init__.py  init_env.py
src/clinical_safety/acquisition/: __init__.py  clinicaltrials_source.py  clinicaltrials_types.py  faers_source.py  source_manifest.py
src/clinical_safety/analytics/: __init__.py  contingency_tables.py  disproportionality.py  seriousness.py  signal_ranking.py
src/clinical_safety/app/: __init__.py  components.py  streamlit_app.py
src/clinical_safety/common/: __init__.py  config.py  exceptions.py  logging.py  mock_data.py  paths.py  secrets.py  types.py
src/clinical_safety/evaluation/: __init__.py  runner.py
src/clinical_safety/evidence/: __init__.py
src/clinical_safety/llm/: __init__.py  gemini_provider.py  (+1 more)
tests/: conftest.py
tests/integration/: test_graph_workflow.py
tests/unit/: test_clinicaltrials_source.py  test_config.py  test_contingency_tables.py  test_data_quality.py  test_evaluation.py  test_faers_parser.py  test_faers_source.py  test_grader.py  test_normalization.py  test_retriever_preferred_terms.py  test_run_evidence_workflow_cli.py  test_signal_metrics.py  test_streamlit_dashboard.py
(+22 files in other folders)
