[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-safety-intelligence"
version = "0.1.0"
description = "Evidence-graded drug safety signal triage system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Data
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "pyarrow>=14.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    # Config / Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "PyYAML>=6.0.1",
    "python-dotenv>=1.0.0",
    # LangGraph / LLM
    "langgraph>=0.2.0,<0.4.0",
    "google-genai>=1.0.0,<2.0.0",
    "joblib>=1.3.0",
    # Dashboard
    "streamlit>=1.35.0",
    "plotly>=5.20.0",
    # Utilities
    "openpyxl>=3.1.0",
    "tqdm>=4.66.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.4.0",
    "imbalanced-learn>=0.11.0",
]

dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]
pdf = [
    "weasyprint>=60.0",
    "markdown>=3.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"
